      recipeTemplate configuration option. (bz #671, #1059)
    * Policy objects can now accept globs and brace expansions when
      specifying subtrees.
    * Cross-compile builds now provide CONFIG_SITE files to enable
      cross-compiling programs that require external site config
      files.  The default site config files are included.

  o Bug Fixes:
    * Fixed a bug that caused using groupName parameter with r.replace() to
      traceback. (bz #1066)

Changes in 1.0.14:
  o Client Changes:
    * Conary now creates shadows instead of branches when cooking onto
      a target label.  This means, for example, that local cooks will
      result in a shadow instead of a branch.
    * Conary now creates shadows on the local label when creating rollbacks
      instead of branches.
    * The branch command has been removed.  Any potential branch should be 
      done with a shadow instead.
    * The verify command now shows local changes on a local shadow instead
      of a local branch
    * Local changesets create diffs against a local shadow (instead of
      a branch) and --target for the commit command retargets to a shadow
    * User conaryrc entries are now searched from most specific target to
      least specific (bz #997)
    * A fresh install of a group will cause all of its contained components 
      to be installed or upgraded as well, without reference to what is 
      currently installed on your system -- no trove will be skipped because
      it is referenced by other troves on your system but not installed.
    * Changeset generation across distributed shadows now force file 
      information to be absolute instead of relative when the files are on
      different servers, eliminating server crosstalk on source checkin and
      when committing local changesets. (bz #1033)
    * Cvc merge now takes a revision, to allow you merge only up to a certain
      point instead of to head.

  o Server Changes: